--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ safety = "^1.10.3"
 flake8 = "^3.9.2"
 pylint = "^2.9.6"
 mypy = "^0.910"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
