--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,14 +12,14 @@ repos:
   hooks:
     - id: system
       name: Black
-      entry: poetry run black .
+      entry: poetry run black netspy tests
       pass_filenames: false
       language: system
 - repo: local
   hooks:
     - id: system
       name: isort
-      entry: poetry run isort .
+      entry: poetry run isort netspy tests
       pass_filenames: false
       language: system
 - repo: local
@@ -34,6 +34,20 @@ repos:
   hooks:
     - id: system
       name: MyPy
-      entry: poetry run mypy
+      entry: poetry run mypy netspy tests
+      pass_filenames: false
+      language: system
+- repo: local
+  hooks:
+    - id: system
+      name: Pylint
+      entry: poetry run pylint netspy tests
+      pass_filenames: false
+      language: system
+- repo: local
+  hooks:
+    - id: system
+      name: Flake8
+      entry: poetry run flake8 netspy tests
       pass_filenames: false
       language: system
