--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ flake8 = "^3.9.2"
 pylint = "^2.9.6"
 mypy = "^0.910"
 pytest = "^6.2.4"
+pre-commit = "^2.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
