--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pylint = "^2.9.6"
 mypy = "^0.910"
 pytest = "^6.2.4"
 pre-commit = "^2.14.0"
+pytest-cov = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
