👷 Upload coverage report to github

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -46,6 +46,7 @@ jobs:
       run: |
         poetry run pytest --cov=netspy tests
 
-    # - name: Upload Coverage to Codecov
-    #   uses: codecov/codecov-action@v1
-    #   with:
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
