--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Generate Report
       run: |
-        poetry run pytest --cov=netspy tests
+        poetry run pytest --cov=netspy --cov-report=xml tests
 
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
