--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,6 +3,11 @@ on: [pull_request]
 jobs:
   run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7.1, 3.8, 3.9, 3.10]
+      fail-fast: false
+
     steps:
     - uses: actions/checkout@v2
       with:
