--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7.1, 3.8, 3.9, 3.10]
+        python-version: [3.7.1, 3.8, 3.9]
       fail-fast: false
 
     steps:
