--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,10 +13,10 @@ jobs:
       with:
         fetch-depth: 2
 
-    - name: Set up Python
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: "3.7"
+        python-version: ${{ matrix.python-version }}
 
     - name: Bootstrap poetry
       shell: bash
@@ -46,6 +46,9 @@ jobs:
       shell: bash
       run: |
         python -m poetry install
+
+    - name: Display Python version
+      run: poetry run python -c "import sys; print(sys.version)"
 
     - name: Generate Report
       run: |
