--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
+
     - name: Bootstrap poetry
       shell: bash
       run: |
