--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Bootstrap poetry
       shell: bash
       run: |
+        poetry env use  $(pyenv which python)
         python -m ensurepip
         python -m pip install --upgrade pip
         python -m pip install poetry
