💚 Trying to use poetry with specific python version

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        poetry env use  $(pyenv which python)
+        poetry env use ${{ matrix.python-version }}
         poetry install
 
     - name: Display Python version
