--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ pytest = "^6.2.4"
 pre-commit = "^2.14.0"
 pytest-cov = "^2.12.1"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
