🏷️ Add types to unit tests

--- a/mypy.ini
+++ b/mypy.ini
@@ -22,5 +22,5 @@ warn_unused_configs = True
 warn_unused_ignores = True
 
 [mypy-netspy.*]
-ignore_errors = False
+ignore_errors = True
 ignore_missing_imports = True
