--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ license = "MIT"
 repository = "https://github.com/alan-turing-institute/netspy"
 readme = "README.md"
 
+[tool.poetry.scripts]
+netspy =  "netspy.cli:app"
+
 [tool.poetry.dependencies]
 python = ">=3.7.1,<3.11"
 pyopenie = "^0.2.0"
@@ -16,6 +19,8 @@ matplotlib = "^3.4.3"
 numpy = "^1.21.2"
 nltk = "^3.6.2"
 pandas = "^1.3.2"
+typer = {extras = ["all"], version = "^0.3.2"}
+pydantic = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
