--- a/mypy.ini
+++ b/mypy.ini
@@ -23,4 +23,12 @@ warn_unused_ignores = True
 
 [mypy-netspy.*]
 ignore_errors = False
+
+[mypy-nltk]
+ignore_missing_imports = True
+
+[mypy-stanza]
+ignore_missing_imports = True
+
+[mypy-click]
 ignore_missing_imports = True
