--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -30,6 +30,7 @@ jobs:
       shell: bash
       run: |
         python -m poetry config virtualenvs.in-project true
+        python -m poetry config virtualenvs.create true
 
     - name: Set up cache
       uses: actions/cache@v2
@@ -38,13 +39,9 @@ jobs:
         path: .venv
         key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
 
-    - name: Ensure cache is healthy
-      if: steps.cache.outputs.cache-hit == 'true'
-      shell: bash
-      run: timeout 10s python -m poetry run pip --version || rm -rf .venv
-
     - name: Install dependencies
       shell: bash
+      if: steps.cache.outputs.cache-hit != 'true'
       run: |
         poetry env use ${{ matrix.python-version }}
         poetry install
