--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -8,7 +8,9 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9]
       fail-fast: false
-
+    env:
+      # Set the location of netspy dependencies
+      NETSPY_DIR: '.dependencies'
     steps:
     - uses: actions/checkout@v2
       with:
@@ -39,12 +41,20 @@ jobs:
         path: .venv
         key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
 
+    - name: Set up 
+      uses: actions/cache@v2
+      id: netspy-dependencies
+      with:
+        path: .dependencies
+        key: netspy-dependencies
+
     - name: Install dependencies
       shell: bash
       # if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m poetry env use ${{ matrix.python-version }}
         python -m poetry install
+        python -m poetry run netspy install
 
     - name: Display Python version
       run: poetry run python -c "import sys; print(sys.version)"
