--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -39,9 +39,9 @@ jobs:
       id: cache
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
-    - name: Set up 
+    - name: Set up netspy cache
       uses: actions/cache@v2
       id: netspy-dependencies
       with:
@@ -50,7 +50,6 @@ jobs:
 
     - name: Install dependencies
       shell: bash
-      # if: steps.cache.outputs.cache-hit != 'true'
       run: |
         python -m poetry env use ${{ matrix.python-version }}
         python -m poetry install
