--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ nltk = "^3.6.2"
 pandas = "^1.3.2"
 typer = {extras = ["all"], version = "^0.3.2"}
 pydantic = "^1.8.2"
-tqdm = "^4.62.2"
+gdown = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
