--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytest = "^6.2.4"
 pre-commit = "^2.14.0"
 pytest-cov = "^2.12.1"
 mkdocs-material = "^7.2.4"
+pytest-mock = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
