🚨 Fix all linter warnings

--- a/mypy.ini
+++ b/mypy.ini
@@ -33,5 +33,8 @@ ignore_missing_imports = True
 [mypy-click]
 ignore_missing_imports = True
 
-[mypy-gdown]
+[mypy-requests]
+ignore_missing_imports = True
+
+[mypy-tqdm]
 ignore_missing_imports = True
