--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ pytest-cov = "^2.12.1"
 mkdocs-material = "^7.2.4"
 pytest-mock = "^3.6.1"
 
+[tool.isort]
+profile = "black"
+
 [tool.pytest.ini_options]
 log_cli = true
 log_cli_level = "INFO"
