🐛 Set tests to "not slow" rather than "not long"

--- a/.github/workflows/check_downloads.yml
+++ b/.github/workflows/check_downloads.yml
@@ -53,5 +53,4 @@ jobs:
 
     - name: Generate Report
       run: |
-        python -m poetry run pytest tests -m "long"
-
+        python -m poetry run pytest tests -m "slow"
