--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(linen
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "serial",
+    "without_cache: marks tests to run that require no netspy dependencies cached",
 ]
 
 [build-system]
