--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -61,8 +61,9 @@ jobs:
       id: netspy-dependencies
       with:
         path: |
-          .dependencies/*
-          .dependencies/openie/*
+          .dependencies/nltk_data/*
+          .dependencies/stanza_corenlp/*
+          .dependencies/openie/languageModel
           !.dependencies/openie/openie-assembly-5.0-SNAPSHOT.jar
         key: netspy-dependencies
 
