--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -6,5 +6,12 @@ repo_url: https://github.com/alan-turing-institute/netspy
 icon:
   repo: fontawesome/brands/github-alt
 
+markdown_extensions:
+  - pymdownx.highlight
+  - pymdownx.superfences
+  - pymdownx.tabbed
+  - pymdownx.inlinehilite
+
 nav:
   - Netspy: index.md
+  - Usage: cli.md
