✨ CLI command to process a file or folder
Refactor speech_graph into two classes

--- a/mypy.ini
+++ b/mypy.ini
@@ -42,6 +42,9 @@ ignore_missing_imports = True
 [mypy-stanza]
 ignore_missing_imports = True
 
+[mypy-stanza.server]
+ignore_missing_imports = True
+
 [mypy-click]
 ignore_missing_imports = True
 
@@ -49,4 +52,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-tqdm]
+ignore_missing_imports = True
+
+[mypy-matplotlib]
 ignore_missing_imports = True
