--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ typer = {extras = ["all"], version = "^0.3.2"}
 pydantic = "^1.8.2"
 requests = "^2.26.0"
 tqdm = "^4.62.2"
+rtoml = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
