--- a/.pylintrc
+++ b/.pylintrc
@@ -148,7 +148,8 @@ disable=print-statement,
         too-few-public-methods,
         no-self-argument,
         no-self-use,
-        duplicate-code
+        duplicate-code,
+        fixme,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
