--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,7 +2,7 @@ name: unit-tests
 on: [pull_request]
 jobs:
   run:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ubuntu-latest]
