--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ pre-commit = "^2.14.0"
 pytest-cov = "^2.12.1"
 mkdocs-material = "^7.2.4"
 pytest-mock = "^3.6.1"
+mkdocs-click = "^0.4.0"
 
 [tool.pytest.ini_options]
 log_cli = true
