🚨 fix linting errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -56,3 +56,6 @@ ignore_missing_imports = True
 
 [mypy-matplotlib]
 ignore_missing_imports = True
+
+[mypy-devtools]
+ignore_missing_imports = True
