--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -35,12 +35,12 @@ jobs:
         python -m poetry config virtualenvs.in-project true
         python -m poetry config virtualenvs.create true
 
-    - name: Set up cache
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: .venv
-        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+    # - name: Set up cache
+    #   uses: actions/cache@v2
+    #   id: cache
+    #   with:
+    #     path: .venv
+    #     key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Install dependencies
       shell: bash
