--- a/.github/workflows/fast-unit-tests.yml
+++ b/.github/workflows/fast-unit-tests.yml
@@ -1,4 +1,4 @@
-name: unit-tests
+name: fast-unit-tests
 on: [pull_request]
 jobs:
   run:
@@ -51,32 +51,7 @@ jobs:
     - name: Display Python version
       run: poetry run python -c "import sys; print(sys.version)"
 
+    # ToDo Add code coverage to these tests?
     - name: Run tests which can't use netspy cache
       run: |
         python -m poetry run pytest tests -m "not slow and without_cache"
-
-    # Cache netspy dependencies except openie (cache too big)
-    - name: Set up netspy cache
-      uses: actions/cache@v2
-      id: netspy-dependencies
-      with:
-        path: |
-          .dependencies/nltk_data/*
-          .dependencies/stanza_corenlp/*
-          .dependencies/openie/*
-          !.dependencies/openie/openie-assembly-5.0-SNAPSHOT.jar
-        key: netspy-dependencies
-
-    - name: Install netspy dependencies
-      shell: bash
-      run: |
-        python -m poetry run netspy install
-
-    - name: Generate Report
-      run: |
-        python -m poetry run pytest --cov=netspy --cov-report=xml tests -m "not slow and not without_cache"
-
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
