--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,14 +17,14 @@ repos:
   hooks:
     - id: black
       name: Black
-      entry: poetry run black netspy tests
+      entry: poetry run black netts tests
       pass_filenames: false
       language: system
 - repo: local
   hooks:
     - id: isort
       name: isort
-      entry: poetry run isort netspy tests
+      entry: poetry run isort netts tests
       pass_filenames: false
       language: system
 - repo: local
@@ -39,20 +39,20 @@ repos:
   hooks:
     - id: mypy
       name: MyPy
-      entry: poetry run mypy netspy tests
+      entry: poetry run mypy netts tests
       pass_filenames: false
       language: system
 - repo: local
   hooks:
     - id: pylint
       name: Pylint
-      entry: poetry run pylint netspy tests -j 0
+      entry: poetry run pylint netts tests -j 0
       pass_filenames: false
       language: system
 - repo: local
   hooks:
     - id: flake8
       name: Flake8
-      entry: poetry run flake8 netspy tests
+      entry: poetry run flake8 netts tests
       pass_filenames: false
       language: system
