--- a/mypy.ini
+++ b/mypy.ini
@@ -3,7 +3,7 @@ pretty = True
 show_absolute_path = True
 show_column_numbers = True
 show_error_codes = True
-files = netspy, tests
+files = netts, tests
 
 # This is mostly equivalent to strict=true as of v0.770
 check_untyped_defs = True
@@ -26,13 +26,13 @@ warn_unused_ignores = True
 ignore_errors = True
 ignore_missing_imports = True
 
-[mypy-netspy.speech_graph.*]
+[mypy-netts.speech_graph.*]
 ignore_errors = True
 
-[mypy-netspy.visualise_paragraph_functions.*]
+[mypy-netts.visualise_paragraph_functions.*]
 ignore_errors = True
 
-[mypy-netspy.nlp_helper_functions.*]
+[mypy-netts.nlp_helper_functions.*]
 ignore_errors = True
 
 
