Include pyproject.toml file in the cache key

--- a/.github/workflows/fast-unit-tests.yml
+++ b/.github/workflows/fast-unit-tests.yml
@@ -41,7 +41,7 @@ jobs:
       id: cache
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
 
     - name: Install dependencies
       shell: bash
