--- a/.github/workflows/slow-unit-tests.yml
+++ b/.github/workflows/slow-unit-tests.yml
@@ -52,7 +52,7 @@ jobs:
       id: cache
       with:
         path: .venv
-        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-${{ hashFiles('**/pyproject.toml') }}
 
     - name: Install dependencies
       shell: bash
