--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -44,4 +44,5 @@ jobs:
         run: |
           python -m poetry env use ${{ matrix.python-version }}
           python -m poetry install
-      - run: poetry run mkdocs gh-deploy --force
+
+      - run: python -m poetry run mkdocs gh-deploy --force
