--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -49,4 +49,4 @@ jobs:
         run: poetry run python -c "import sys; print(sys.version)"
 
       - name: Deploy docs
-        run: poetry run mkdocs gh-deploy --force
+        run: poetry run mkdocs gh-deploy --force --config-file docs/mkdocs.yml    
