Change how images are displayed

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -12,6 +12,8 @@ markdown_extensions:
   - pymdownx.tabbed
   - pymdownx.inlinehilite
   - mkdocs-click
+  - attr_list
+  - md_in_html
 
 nav:
   - Netts: index.md
