--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -9,7 +9,12 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: [3.7]
-      fail-fast: false
+      runs-on: ubuntu-latest
+      steps: 
+        ...
+        - name Set up Python
+          uses: actions/setup-python@v1
+        ...
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
