--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,15 @@ license = "GPL-3.0-or-later3"
 documentation = "https://alan-turing-institute.github.io/netts/"
 repository = "https://github.com/alan-turing-institute/netts"
 readme = "README.md"
+classifiers = [
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Topic :: Scientific/Engineering",
+    "Programming Language :: Python :: 3",
+    "Operating System :: MacOS",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: POSIX :: Linux",
+]
+keywords = ["NLP", "networks", "transcribed speech", "semantic content", "graph theory"]
 
 [tool.poetry.scripts]
 netts =  "netts.cli:app"
