--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,3 +56,7 @@ repos:
       entry: poetry run flake8 netts tests
       pass_filenames: false
       language: system
+- repo: https://github.com/igorshubovych/markdownlint-cli
+  rev: v0.29.0
+  hooks:
+  - id: markdownlint
