--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "netts"
-version = "0.2.0-rc.1"
+version = "0.2.0"
 description = "Toolbox for constructing NETworks of Transcript Semantics."
 authors = [
     "Caroline Nettekoven <crn29@cam.ac.uk>",
