--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ requests = "^2.26.0"
 tqdm = "^4.62.2"
 rtoml = "^0.7.0"
 typer = {version = "^0.4.1", extras = ["all"]}
+gdown = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.9.3"
