--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "netts"
-version = "0.3.0"
+version = "0.3.1"
 description = "Toolbox for constructing NETworks of Transcript Semantics."
 authors = [
-    "Caroline Nettekoven <crn29@cam.ac.uk>",
+    "Caroline Nettekoven <crn29@cantab.ac.uk>",
     "Sarah Morgan <sem91@cam.ac.uk>",
     "Oscar Terence Giles <ogiles@turing.ac.uk>",
     "Helen Duncan <hduncan@turing.ac.uk>",
