set poetry version

--- a/.github/workflows/slow-unit-tests.yml
+++ b/.github/workflows/slow-unit-tests.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         python -m ensurepip
         python -m pip install --upgrade pip
-        python -m pip install poetry
+        python -m pip install poetry==1.4.0
 
     - name: Configure poetry
       shell: bash
